# diffusion-mol-gen

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
src/diffusion_mol_gen/: __init__.py  cli.py  configs.py
src/diffusion_mol_gen/configs/: __init__.py  base.py
src/diffusion_mol_gen/data/: datamodule.py  qm9_dataset.py  transforms.py
src/diffusion_mol_gen/diffusion/: __init__.py  noise_schedules.py  unified.py
src/diffusion_mol_gen/diffusion/categorical/: __init__.py  absorbing.py  ctmc.py  d3pm.py
src/diffusion_mol_gen/diffusion/continuous/: __init__.py  flow_matching.py  score_sde.py  variational.py
src/diffusion_mol_gen/evaluation/: __init__.py  metrics.py  visualization.py
src/diffusion_mol_gen/models/: __init__.py  denoiser.py  egnn.py  heads.py
src/diffusion_mol_gen/models/backbone/: __init__.py  egnn.py  mol_gnn.py  time_embedding.py
src/diffusion_mol_gen/models/heads/: __init__.py  atom_type_head.py  bond_order_head.py  charge_head.py  position_head.py
src/diffusion_mol_gen/sampling/: __init__.py  ode_sampler.py  sde_sampler.py  utils.py  variational_sampler.py
src/diffusion_mol_gen/training/: __init__.py  lightning_module.py  losses.py
