[project]
name = "diffusion-mol-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BrokenDuck", email = "jonathan.maillefaud@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ase>=3.28.0",
    "click>=8.4.1",
    "einops>=0.8.2",
    "numpy>=2.4.6",
    "py3dmol>=2.5.5",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytorch-lightning>=2.6.5",
    "rdkit>=2026.3.3",
    "scipy>=1.17.1",
    "torch>=2.12.1",
    "torch-ema>=0.3",
    "torch-geometric>=2.8.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "useful-rdkit-utils>=1.0",
    "wandb>=0.27.2",
]

[project.optional-dependencies]
cu130 = [
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
]

[project.scripts]
dmg = "diffusion_mol_gen.cli:cli"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
